// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ruby_third_parties_elasticsearch datatype_in_bulk 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_elasticsearch",
      "title": "Sensitive data sent to Elasticsearch detected.",
      "description": "## Description\\nLeaking sensitive data to third-party data tools is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Elasticsearch.\\n\\n## Remediations\\nWhen sending data to third-party services, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Elasticsearch docs](https://www.elastic.co/guide/en/elasticsearch/client/ruby-api/current/index.html)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_elasticsearch",
      "line_number": 3,
      "full_filename": "/tmp/bearer-scan/datatype_in_bulk.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 3,
        "end": 3,
        "column": {
          "start": 10,
          "end": 38
        }
      },
      "sink": {
        "start": 10,
        "end": 10,
        "column": {
          "start": 1,
          "end": 24
        },
        "content": "client.bulk(body: body)"
      },
      "parent_line_number": 10,
      "snippet": "client.bulk(body: body)",
      "fingerprint": "93988d54e68509de8c6ec9eca5c9ee30_0",
      "old_fingerprint": "149568b24676a5bf75d00ae3965931b2_0"
    }
  ]
}"
`;

exports[`ruby_third_parties_elasticsearch datatype_in_index 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_elasticsearch",
      "title": "Sensitive data sent to Elasticsearch detected.",
      "description": "## Description\\nLeaking sensitive data to third-party data tools is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Elasticsearch.\\n\\n## Remediations\\nWhen sending data to third-party services, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Elasticsearch docs](https://www.elastic.co/guide/en/elasticsearch/client/ruby-api/current/index.html)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_elasticsearch",
      "line_number": 3,
      "full_filename": "/tmp/bearer-scan/datatype_in_index.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 3,
        "end": 3,
        "column": {
          "start": 10,
          "end": 38
        }
      },
      "sink": {
        "start": 4,
        "end": 4,
        "column": {
          "start": 1,
          "end": 45
        },
        "content": "client.index({ index: 'users', body: user })"
      },
      "parent_line_number": 4,
      "snippet": "client.index({ index: 'users', body: user })",
      "fingerprint": "93988d54e68509de8c6ec9eca5c9ee30_0",
      "old_fingerprint": "b117595351fb5d441f2d8ae32cc172fa_0"
    }
  ]
}"
`;

exports[`ruby_third_parties_elasticsearch datatype_in_update 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_elasticsearch",
      "title": "Sensitive data sent to Elasticsearch detected.",
      "description": "## Description\\nLeaking sensitive data to third-party data tools is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Elasticsearch.\\n\\n## Remediations\\nWhen sending data to third-party services, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Elasticsearch docs](https://www.elastic.co/guide/en/elasticsearch/client/ruby-api/current/index.html)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_elasticsearch",
      "line_number": 1,
      "full_filename": "/tmp/bearer-scan/datatype_in_update.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 1,
        "end": 1,
        "column": {
          "start": 10,
          "end": 38
        }
      },
      "sink": {
        "start": 3,
        "end": 5,
        "column": {
          "start": 1,
          "end": 46
        },
        "content": "Elasticsearch::Client\\n  .new\\n  .update(index: 'books', id: 42, body: user)"
      },
      "parent_line_number": 3,
      "snippet": "Elasticsearch::Client\\n  .new\\n  .update(index: 'books', id: 42, body: user)",
      "fingerprint": "93988d54e68509de8c6ec9eca5c9ee30_0",
      "old_fingerprint": "d0c2cbc2f125ea7324bf6e74b68ebe1c_0"
    }
  ]
}"
`;

exports[`ruby_third_parties_elasticsearch ok_datatype_ignored 1`] = `"{}"`;

exports[`ruby_third_parties_elasticsearch ok_no_datatype 1`] = `"{}"`;
